Regression: Action actuator with playback type "Flipper" does not reverse correctly after action reaches end frame #41168

Closed
opened 2014-07-24 22:02:57 +02:00 by Sam Brubaker · 11 comments

Broken: Version 2.71 official
Worked: Version 2.70a official

How to reproduce:

  • Open the attached file in the latest version of Blender, inspect the cube's logic bricks, and press P to start the game.
  • Left click to lift the cube, and release to put it back down.

Notice that if you hold LMB for long enough, allowing the cube to reach the end of its action, the cube will not go back down gently when you release. Instead, it snaps back down.

Expected behaviour:

  • Open and play the same game in version 2.70a.
  • Notice now that you can hold the cube at the top, and releasing the left mouse button always plays the action in reverse, putting the cube down smoothly, regardless of how long you've held it up there.

The Flipper playback type should behave as it did in 2.70; playing the action forward when given a positive signal, then reversing when negative. The current behaviour of "snapping" back to frame 0 is a regression and it negates the usefulness of the feature.

Broken: Version 2.71 official Worked: Version 2.70a official How to reproduce: - Open the attached file in the latest version of Blender, inspect the cube's logic bricks, and press P to start the game. - Left click to lift the cube, and release to put it back down. # Notice that if you hold LMB for long enough, allowing the cube to reach the end of its action, the cube will not go back down gently when you release. Instead, it snaps back down. Expected behaviour: - Open and play the same game in version 2.70a. - Notice now that you can hold the cube at the top, and releasing the left mouse button always plays the action in reverse, putting the cube down smoothly, regardless of how long you've held it up there. The Flipper playback type should behave as it did in 2.70; playing the action forward when given a positive signal, then reversing when negative. The current behaviour of "snapping" back to frame 0 is a regression and it negates the usefulness of the feature.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rocketman

Added subscriber: @rocketman

#42852 was marked as duplicate of this issue

#42852 was marked as duplicate of this issue
Author

Oops! nearly forgot the file:

flipper_bug.blend

Oops! nearly forgot the file: [flipper_bug.blend](https://archive.blender.org/developer/F99433/flipper_bug.blend)

Added subscriber: @avrprj

Added subscriber: @avrprj

This is a side effect of the memory management for layers of action. After delete layer the actuator continues to request current frame and gets 0.

This is a side effect of the memory management for layers of action. After delete layer the actuator continues to request current frame and gets 0.

Added subscribers: @Moguri, @dfelinto

Added subscribers: @Moguri, @dfelinto

@Moguri have you seen this?

@Moguri have you seen this?

Yes. I did a quick patch and it is works, but I do not think a solution optimal, as it was necessary to introduce a new playtype in BL_Action. I think there is another solution to the conservation of the management layers mechanism.

Yes. I did a quick patch and it is works, but I do not think a solution optimal, as it was necessary to introduce a new playtype in BL_Action. I think there is another solution to the conservation of the management layers mechanism.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Mitchell Stokes self-assigned this 2014-12-03 04:28:58 +01:00

Added subscriber: @hougang

Added subscriber: @hougang
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41168
No description provided.